CB-1255 - Change references to Product to User Product

--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -43,7 +43,7 @@
                         <span title="Control Authority" style="margin-right: 8px;"><i>CA: </i><b>{{subarray.delegated_ca}}</b></span>
                         <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{subarray.band ?
                             subarray.band : 'None'}}</b></span>
-                        <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{subarray.product
+                        <span title="Selected User Product" style="margin-right: 8px;"><i>User Product: </i><b>{{subarray.product
                             ? subarray.product : 'None'}}</b></span>
                         <span ng-show="subarray.state === 'active' || subarray.config_label" style="margin-right: 8px;"
                               title="Config Label"><i>Config Label: </i><b>{{subarray.config_label ?
