--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -22,8 +22,8 @@
                     <span title="Selected Band" style="margin: 0 12px">
                          <i>Band: </i><b>{{subarray.band ? subarray.band : 'None'}}</b>
                      </span>
-                    <span title="Selected Product" style="margin: 0 12px">
-                         <i>Product: </i><b>{{subarray.product ? subarray.product : 'None'}}</b>
+                    <span title="Selected User Product" style="margin: 0 12px">
+                         <i>User Product: </i><b>{{subarray.product ? subarray.product : 'None'}}</b>
                      </span>
                     <span ng-show="subarray.config_label" title="Config Label" style="margin: 0 12px">
                          <i>Config Label: </i><b>{{subarray.config_label ? subarray.config_label : 'None'}}</b>
