--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -67,9 +67,9 @@
                                     </md-button>
                                 </md-menu-item>
                                 <md-menu-item>
-                                    <md-button ng-disabled="vm.subarray.state === 'active'" ng-click="parent.vm.openProductsDialog($event)" title="Select a Product">
+                                    <md-button ng-disabled="vm.subarray.state === 'active'" ng-click="parent.vm.openProductsDialog($event)" title="Select a User Product">
                                         <span style="margin-right: 4px" class="fa fa-cube"></span>
-                                        <span>Set Product...</span>
+                                        <span>Set User Product...</span>
                                     </md-button>
                                 </md-menu-item>
                                 <md-menu-item>
