WIP - change links to katlogfileserver to kibana links for resources, subarrays, alarms and katcpmessages

--- a/app/cam-components/cam-components.html
+++ b/app/cam-components/cam-components.html
@@ -25,7 +25,7 @@
             <span>View System Logs</span>
         </md-button>
         <md-button style="margin-right: 180px;" class="md-primary md-raised" md-theme="{{themePrimaryButtons}}"
-                   ng-click="$root.openKatsnifferLogger('katcpmsgs.log');" title="View KATCP Messages Logs in a new tab">
+                   ng-click="$root.openLogWithProgramNameFilter('katcpmsgs');" title="View KATCP Messages Logs in a new tab">
             <span>View KATCP Messages Log</span>
         </md-button>
 
