--- a/app/login-form/login-form.html
+++ b/app/login-form/login-form.html
@@ -1,7 +1,7 @@
 <div class="md-whiteframe-z4 login-form" ng-controller="LoginFormCtrl as vm" layout="column"
      layout-align="center center">
     <md-toolbar class="md-tall md-whiteframe-z1" layout-align="center center">
-        <h1>KATGUI <b>{{$root.systemType? ' - ' + $root.systemType : ''}}</b></h1>
+        <h1>KATGUI <b>{{$root.site? ' - ' + $root.site : ''}}</b></h1>
     </md-toolbar>
     <form ng-submit="vm.verify(vm.credentials, vm.loginAs)" style="padding-top: 24px;" flex name="form" layout="column" layout-align="center center" layout-padding md-theme="{{themePrimaryButtons}}">
         <md-input-container ng-if="$root.devMode" class="long-input">
