--- a/app/widgets/navigation/navigation-widget-blocks.html
+++ b/app/widgets/navigation/navigation-widget-blocks.html
@@ -60,7 +60,7 @@
         <div flex class="md-whiteframe-z1 nav-widget-button-container" md-theme="{{$root.themePrimaryButtons}}" layout="column">
             <md-button flex class="md-raised md-primary" ng-click="$root.openCentralLogger()" layout="row"><span class="fa fa-folder-open-o"></span><span flex>Central Logs</span></md-button>
             <md-button flex class="md-raised md-primary" ng-click="$root.openSystemLogger()" layout="row"><span class="fa fa-file-text-o"></span><span flex>System Logs</span></md-button>
-            <md-button flex class="md-raised md-primary" ng-click="$root.openKatsnifferLogger('katcpmsgs.log')" layout="row"><span class="fa fa-file-text"></span><span flex>KATCP Logs</span></md-button>
+            <md-button flex class="md-raised md-primary" ng-click="$root.openLogWithProgramNameFilter('katcpmsgs')" layout="row"><span class="fa fa-file-text"></span><span flex>KATCP Logs</span></md-button>
             <md-button flex class="md-raised md-primary" ng-click="$root.openUrlInNewTab('https://drive.google.com/drive/folders/0B8fhAW5QnZQWVkdXYm1GTnZ2X1k')" layout="row"><span class="fa fa-google"></span><span flex>CAM Deployment Docs</span></md-button>
         </div>
     </div>
