--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -19,8 +19,7 @@
                                  layout-align="start center" title="{{'Sensors ok status: ' + vm.sensorValues[rec.name + '_sensors_ok'].status}}">
                     <span style="min-height: 25px; max-width: 140px;" title="Last Changed; Since: {{rec.since}}">{{rec.fromNow}}</span>
                     <span style="font-size: 26px;" flex><b>{{rec.name}}</b></span>
-                    <span class="flash-receptor-state"
-                          ng-class="{'receptor-stop-state': vm.sensorValues[rec.name + '_mode'].value === 'STOP', 'receptor-stow-state': vm.sensorValues[rec.name + '_mode'].value === 'STOW'}">
+                    <span ng-class="vm.getReceptorModeTextClass(rec.name)">
                         <b>{{vm.sensorValues[rec.name + '_mode'].value}}</b>
                     </span>
 
