Fix weather to work with historical data

--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -43,10 +43,10 @@
             <compass-chart redraw-function="vm.redrawCompass" style="min-width: 120px; min-height: 120px;">
             </compass-chart>
             <div flex layout="column" style="margin-left: 56px;">
-                <div ng-repeat="sensorName in vm.ancSensors track by $index" class="resource-sensor-item" ng-if="sensorName !== 'wind direction'"
-                     layout="row" class="unselectable">
+                <div ng-repeat="sensorName in vm.ancSensors track by $index" class="{{'anc_' + sensorName + ' resource-sensor-item'}}"
+                    ng-if="sensorName !== 'wind direction'" layout="row">
                     <span style="min-width: 140px">{{sensorName}}</span>
-                    <span class="resource-sensor-value-item" style="width: 80px"
+                    <span class="resource-sensor-value-item"style="width: 80px"
                           ng-show="vm.sensorValues['anc_' + sensorName]">{{vm.sensorValues['anc_' + sensorName].value | number:1}}</span>
                     <span style="margin-left: 8px; width: 60px" ng-if="vm.maxSensorValue['anc_' + sensorName]">
                         {{vm.maxSensorValue['anc_' + sensorName].value | number:1}}
