--- a/app/health/health.html
+++ b/app/health/health.html
@@ -17,7 +17,7 @@
             <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Black"></div><span>CAM Sensor Error</span></div>
         </div>
     </div>
-    <status-single-level-tree-map flex style="display: inline-block; margin-left: 4px; margin-right:4px;" auto-resize="true" layout-mode="dice"
+    <status-single-level-tree-map flex style="display: inline-block; margin-left: 4px; margin-right:4px;" auto-resize="true"
                                   ng-repeat="tree in vm.topStatusTrees" data="tree"></status-single-level-tree-map>
 
     <div class="treemap-tooltip" style="visibility: hidden; background-color: #ffffff"></div>
