--- a/app/widgets/navigation/navigation-widget-blocks.html
+++ b/app/widgets/navigation/navigation-widget-blocks.html
@@ -23,7 +23,7 @@
             <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('receptorStatus')" layout="row"><span class="fa fa-th"></span><span flex>Receptor Status</span></md-button>
             <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('receptorPointing')" layout="row"><span class="fa fa-crosshairs"></span><span flex>Receptor Pointing</span></md-button>
             <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('receptorHealth')" layout="row"><span class="fa fa-th-large"></span><span flex>Receptor Health</span></md-button>
-            <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('subarrayHealth')" layout="row"><span class="fa fa-asterisk"></span><span flex>Subarray Health</span></md-button>
+            <!-- <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('subarrayHealth')" layout="row"><span class="fa fa-asterisk"></span><span flex>Subarray Health</span></md-button> -->
         </div>
     </div>
 
