updated alarms to work with nats subscriptions; better handling of global subscriptions to not emit messages for displays not interested in them

--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -79,7 +79,7 @@
 
                     <div ng-if="item.selected" class="selected-alarm-list-item"></div>
 
-                    <div class="alarms-list-item-icon" ng-click="$event.stopPropagation(); vm.showAggregateSensorDetail(item)">
+                    <div class="alarms-list-item-icon" ng-click="vm.showAggregateSensorDetail(item); $event.stopPropagation()">
                         <span class="fa fa-warning" ng-switch-when="warn">
                             <md-tooltip>Warning</md-tooltip>
                         </span>
