--- a/app/health/health.html
+++ b/app/health/health.html
@@ -17,8 +17,15 @@
             <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Black"></div><span>CAM Sensor Error</span></div>
         </div>
     </div>
-    <status-single-level-tree-map flex style="display: inline-block; margin-left: 4px; margin-right:4px;" auto-resize="true"
-                                  ng-repeat="tree in vm.topStatusTrees" data="tree"></status-single-level-tree-map>
+    <div flex ng-repeat="tree in vm.topStatusTrees" layout="column" style="min-height: 100%; padding: 2px">
+        <md-toolbar class="status-top-label md-toolbar-tools-medium md-whiteframe-z1">
+            <label>{{tree.name}}</label>
+        </md-toolbar>
+        <div flex ng-repeat="sub in tree.subs" ng-class="vm.getClassesOfSensor(sub)" layout="column" layout-align="center center"
+            style="border: 1px solid">
+            <label ng-mouseup="vm.subMouseUp(sub, $event)" style="cursor: pointer">{{sub.name}}</label>
+        </div>
+    </div>
 
     <div class="treemap-tooltip" style="visibility: hidden; background-color: #ffffff"></div>
 </div>
